--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordova-plugin-media",
-  "version": "1.0.2-dev",
-  "description": "Cordova Media Plugin",
+  "name": "cordova-plugin-media-playback",
+  "version": "1.0.2-dev2",
+  "description": "Cordova Media Plugin (with playback rate)",
   "cordova": {
-    "id": "cordova-plugin-media",
+    "id": "cordova-plugin-media-playback",
     "platforms": [
       "android",
       "amazon-fireos",
